<resources>
    <string name="app_name">Crunch Burger House</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="crunch_burger_app">Crunch Burger App</string>
    <string name="hello_explore_your_dream_food">Hello Explore Your Dream Food</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_in2">Sign In</string>
    <string name="daily_meal">Daily Meal</string>
    <string name="favourite">Favourite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cart">My Cart</string>
    <string name="burgerapp_gmail_com">burgerapp@gmail.com</string>
    <string name="s_t_c">S T C</string>
    <string name="_10_00_23_00">10:00 - 23:00</string>
    <string name="product_name">Product Name</string>
    <string name="_5_0">5.0</string>
    <string name="your_favorite_and_testy_food_is_here">Your favorite and testy food is here !</string>
    <string name="view_more">view more</string>
    <string name="my_cart1">My Cart</string>
    <string name="make_order">Make Order</string>
    <string name="אשרהזמנה">אשר הזמנה</string>
    <string name="ההזמנהשלי">ההזמנה שלי</string>
    <string name="סהכ">סה\'\'כ</string>
    <string name="שלוםמסעוד">שלום מסעוד</string>
    <string name="מהבאלךלאכולהיום">מה בא לך לאכול היום ?</string>
    <string name="חיפוש">חיפוש</string>
    <string name="בית">בית</string>
    <string name="ארוחותיומיות">ארוחות יומיות</string>
    <string name="באלילאכול">בא לי לאכול</string>
    <string name="הגדרות">הגדרות</string>
    <string name="ראהעוד">ראה עוד</string>
    <string name="האוכלהאהובעליכם">האוכל האהוב עליכם כאן</string>
    <string name="מתכוניסופשבועטעימיםארוחתערב">10 מתכוני סופשבוע טעימים \nארוחת ערב</string>
    <string name="הוסף">הוסף להזמנה</string>
    <string name="הנחה">הנחה</string>
</resources>